Lint: Use valueOf instead of new